--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,12 +4,14 @@ plugins {
 }
 
 android {
-    compileSdk 32
-
+    compileSdk 33
+    buildFeatures {
+        viewBinding true
+    }
     defaultConfig {
         applicationId "com.example.orgs"
         minSdk 22
-        targetSdk 32
+        targetSdk 33
         versionCode 1
         versionName "1.0"
 
@@ -23,12 +25,16 @@ android {
         }
     }
     compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_8
-        targetCompatibility JavaVersion.VERSION_1_8
+        sourceCompatibility JavaVersion.VERSION_11
+        targetCompatibility JavaVersion.VERSION_11
     }
     kotlinOptions {
-        jvmTarget = '1.8'
+        jvmTarget = '11'
     }
+    buildFeatures {
+        viewBinding true
+    }
+
 }
 
 dependencies {
@@ -37,6 +43,9 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.5.0'
     implementation 'com.google.android.material:material:1.6.1'
     testImplementation 'junit:junit:4.13.2'
+    implementation 'io.coil-kt:coil:1.2.2'
+    implementation "io.coil-kt:coil-gif:1.2.2"
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+
 }
