--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,6 +24,8 @@
         <activity android:name=".ui.activity.formulario_produto_activity"
             android:exported="true">
         </activity>
+        <activity android:name=".ui.activity.Activity_View_Produto_Dados"
+            android:exported="true"/>
 
         <meta-data
             android:name="preloaded_fonts"
