--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,8 @@
 plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
+    id 'kotlin-android'
+    id 'kotlin-parcelize'
 }
 
 android {
@@ -11,7 +13,8 @@ android {
     defaultConfig {
         applicationId "com.example.orgs"
         minSdk 22
-        targetSdk 33
+        targetSdkVersion 31
+
         versionCode 1
         versionName "1.0"
 
@@ -38,10 +41,12 @@ android {
 }
 
 dependencies {
-
+    implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     implementation 'androidx.core:core-ktx:1.7.0'
     implementation 'androidx.appcompat:appcompat:1.5.0'
     implementation 'com.google.android.material:material:1.6.1'
+    implementation 'androidx.constraintlayout:constraintlayout:2.1.1'
+    implementation "androidx.recyclerview:recyclerview:1.2.1"
     testImplementation 'junit:junit:4.13.2'
     implementation 'io.coil-kt:coil:1.2.2'
     implementation "io.coil-kt:coil-gif:1.2.2"
