--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,9 +21,13 @@
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
+        <activity android:name=".ui.activity.Activity_View_Produto_Dados"
+            android:exported="true"/>
+
         <activity android:name=".ui.activity.formulario_produto_activity"
             android:exported="true">
         </activity>
+
 
         <meta-data
             android:name="preloaded_fonts"
