--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,6 +43,8 @@ android {
 
 dependencies {
 
+    implementation 'androidx.room:room-common:2.3.0'
+    implementation 'androidx.room:room-ktx:2.3.0'
     def room_version = "2.3.0"
     kapt "androidx.room:room-compiler:$room_version"
 
