--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,14 +14,15 @@
         android:theme="@style/Theme.Orgs"
         tools:targetApi="31">
 
-        <activity android:name=".ui.activity.ListaProdutosActivity"
+        <activity android:name=".ui.activity.LoginActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
-
+        <activity android:name=".ui.activity.ListaProdutosActivity"/>
+        <activity android:name=".ui.activity.FormularioCadastroUsuarioActivity"/>
             <activity android:name=".ui.activity.Activity_View_Produto_Dados"/>
         <activity android:name=".ui.activity.FormularioProdutoActivity"
             android:exported="true">
